--- a/research/02_prepare_base_model.ipynb
+++ b/research/02_prepare_base_model.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,28 +200,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-04-05 16:33:25,730: INFO: common: yaml file: config\\config.yaml loaded successfully]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2024-04-05 16:33:25,740: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-04-05 16:33:25,740: INFO: common: created directory at: artifacts]\n",
-      "[2024-04-05 16:33:25,748: INFO: common: created directory at: artifacts/prepare_base_model]\n",
-      "Model: \"model_2\"\n",
+      "[2024-04-05 16:38:04,599: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-04-05 16:38:04,601: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-04-05 16:38:04,602: INFO: common: created directory at: artifacts]\n",
+      "[2024-04-05 16:38:04,604: INFO: common: created directory at: artifacts/prepare_base_model]\n",
+      "[2024-04-05 16:38:04,972: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
+      "Model: \"model_3\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_3 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
+      " input_4 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
       "                                                                 \n",
       " block1_conv1 (Conv2D)       (None, 224, 224, 64)      1792      \n",
       "                                                                 \n",
@@ -259,16 +254,15 @@
       "                                                                 \n",
       " block5_pool (MaxPooling2D)  (None, 7, 7, 512)         0         \n",
       "                                                                 \n",
-      " flatten_2 (Flatten)         (None, 25088)             0         \n",
+      " flatten_3 (Flatten)         (None, 25088)             0         \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 2)                 50178     \n",
+      " dense_3 (Dense)             (None, 2)                 50178     \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 14,764,866\n",
       "Trainable params: 50,178\n",
       "Non-trainable params: 14,714,688\n",
-      "_________________________________________________________________\n",
-      "[2024-04-05 16:33:26,280: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n"
+      "_________________________________________________________________\n"
      ]
     }
    ],
